objects/DL_VC__Business_Case__c.object
<CustomObject>
    <fields>
        <fullName>DL_VC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Cases</relationshipLabel>
        <relationshipName>Business_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_VC__Cost_of_Delay__c</fullName>
        <label>Cost of Delay</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__NPV__c</fullName>
        <label>NPV</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Payback__c</fullName>
        <label>Payback</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__ROI__c</fullName>
        <label>ROI</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__TCO__c</fullName>
        <label>TCO</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Term__c</fullName>
        <label>Term</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Total_Benefits__c</fullName>
        <label>Total Benefits</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Total_Costs__c</fullName>
        <label>Total Costs</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Value_Prop_Id__c</fullName>
        <externalId>true</externalId>
        <label>Value Prop Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Business Case</label>
    <nameField>
        <label>Business Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>